# bazel-intellij-rust-example

./: .gitignore  BUILD  README.md  WORKSPACE  main.rs
dependencies/: deps.bzl
dependencies/crates/: BUILD.bazel  Cargo.toml  crates.bzl
dependencies/crates/remote/: BUILD.cfg-if-1.0.0.bazel  BUILD.getrandom-0.2.4.bazel  BUILD.libc-0.2.115.bazel  BUILD.ppv-lite86-0.2.16.bazel  BUILD.rand-0.8.4.bazel  BUILD.rand_chacha-0.3.1.bazel  BUILD.rand_core-0.6.3.bazel  BUILD.rand_hc-0.3.1.bazel  BUILD.wasi-0.10.2+wasi-snapshot-preview1.bazel
lib1/: BUILD  lib1.rs
lib1/fruit/: apple.rs  banana.rs  mod.rs
lib2/: BUILD  lib2.rs
lib2/veg/: carrot.rs  mod.rs  onion.rs
