[package]
name = "bazel-intellij-rust-example-external"
version = "0.0.0"

[lib]
path = "" # ignored by cargo raze

[dependencies]
rand = "0.8.4"

[package.metadata.raze]
# The path at which to write output files.
#
# `cargo raze` will generate Bazel-compatible BUILD files into this path.
# This must be relative to the Bazel workspace root (e.g. "//foo/bar").
workspace_path = "//dependencies/crates"

# This causes aliases for dependencies to be rendered in the BUILD
# file located next to this `Cargo.toml` file.
package_aliases_dir = "."

# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

# The two acceptable options are "Remote" and "Vendored" which
# is used to indicate whether the user is using a non-vendored or
# vendored set of dependencies.
genmode = "Remote"
